--- a/app/views/pictures/_new.html.erb
+++ b/app/views/pictures/_new.html.erb
@@ -11,8 +11,7 @@
         <div class="px-4 py-3">
           <%= form_for(Picture.new) do |f| %>
             <div class="form-group">
-              <%= f.label :ジャンル %>
-              <br>
+              <%= f.label :ジャンル %><br>
               <%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
             </div>
             <div class="form-group">
