--- a/app/views/users/_menu.html.erb
+++ b/app/views/users/_menu.html.erb
@@ -1,39 +1,22 @@
 <div class="mypage-header">
   <%= image_tag 'header.jpg',style:"height:300px; width:100%; object-fit:cover;",alt:"ヘッダー画像です" %>
 </div>
-
 <div class="mypage-menu">
   <ul class="menu-itembox">
+    <li class="menu-item"><span>投稿</span><span class="item-value"><%=link_to "#{@user.pictures.count}", user_path(@user.id) %></span></li>
+    <li class="menu-item"><span>フォロー</span><span class="item-value"><%=link_to "#{@user.followings.count}", follows_user_path(@user.id) %></span></li>
+    <li class="menu-item"><span>フォロワー</span><span class="item-value"><%=link_to "#{@user.followers.count}", followers_user_path(@user.id) %></span></li>
+    <li class="menu-item"><span>いいね</span><span class="item-value"><%=link_to "#{@favorite_pictures.count}", favorites_user_path(@user.id) %></span></li>
     <li class="menu-item">
-      <span>投稿</span>
-      <span class="item-value"><%=link_to "#{@user.pictures.count}", user_path(@user.id) %></span>
+      <% if current_user == @user %>
+        <%= link_to "プロフィールを編集",edit_user_path, class: "btn btn-default",style:"margin-left:200px; color:#777; border-radius: 30px; position: relative; top:-22%;" %>
+      <% else %>
+          <% if @user.followed_by?(current_user) %>
+            <%=link_to "フォロー中", user_relationships_path(@user.id), method: :delete,"data-confirm" => "本当にフォローを解除しますか？", class: "btn btn-default",style:"margin-left:200px; color:white; border-radius: 30px; position: relative; top:-22%;background-color:#158cf3;border: 1px solid #158cf3;" %>
+          <% else %>
+            <%=link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-default",style:"margin-left:200px; color:#777; border-radius: 30px; position: relative; top:-22%;border: 1px solid #158cf3;color:#158cf3;"  %>
+          <% end %>
+      <% end %>
     </li>
-    <li class="menu-item">
-      <span>フォロー</span>
-      <span class="item-value"><%=link_to "#{@user.followings.count}", follows_user_path(@user.id) %></span>
-    </li>
-    <li class="menu-item">
-      <span>フォロワー</span>
-      <span class="item-value"><%=link_to "#{@user.followers.count}", followers_user_path(@user.id) %></span>
-    </li>
-    <li class="menu-item">
-      <span>いいね</span>
-      <span class="item-value"><%=link_to "#{@favorite_pictures.count}", favorites_user_path(@user.id) %></span>
-    </li>
-
-       <li class="menu-item">
-            <% if current_user == @user %>
-               <%= link_to "プロフィールを編集",edit_user_path, class: "btn btn-default",style:"margin-left:200px; color:#777; border-radius: 30px; position: relative; top:-22%;" %>
-             <% else %>
-                <% if @user.followed_by?(current_user) %>
-                   <%=link_to "フォロー中", user_relationships_path(@user.id), method: :delete,"data-confirm" => "本当にフォローを解除しますか？", class: "btn btn-default",style:"margin-left:200px; color:white; border-radius: 30px; position: relative; top:-22%;background-color:#158cf3;border: 1px solid #158cf3;" %>
-                  <% else %>
-                    <%=link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-default",style:"margin-left:200px; color:#777; border-radius: 30px; position: relative; top:-22%;border: 1px solid #158cf3;color:#158cf3;"  %>
-                  <% end %>
-            <% end %>
-        </li>
   </ul>
-
-
-
 </div>
