Add+Fix: 投稿一覧画面に検索画像を追加、管理者画面の日付表示修正
・投稿一覧画面の画像で検索できるボタンを追加
・管理者画面の日本語表示に伴い、日付がエラー表示が発生していたのを修正

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,8 +4,8 @@
 			<ul class="nav nav-tabs"> <!--タブの部分  -->
     			<li class="nav-item"><a href="#tab1" class="nav-link active" data-toggle="tab">サイト / 制作理由</a></li>
     			<li class="nav-item"><a href="#tab2" class="nav-link" data-toggle="tab">制作期間 / スキル</a></li>
-    			<li class="nav-item"><a href="#tab3" class="nav-link" data-toggle="tab">基本機能</a></li>
-    			<li class="nav-item"><a href="#tab4" class="nav-link" data-toggle="tab">+機能/工夫</a></li>
+    			<li class="nav-item"><a href="#tab3" class="nav-link" data-toggle="tab">導入機能</a></li>
+    		<!-- 	<li class="nav-item"><a href="#tab4" class="nav-link" data-toggle="tab"></a></li> -->
   			</ul>
   			<div class="tab-content"><!--タブのコンテンツ部分-->
     			<div id="tab1" class="tab-pane active">
@@ -33,11 +33,11 @@
             <p class="about-text" style="padding-top: 10px;">2月: 4人1組でECサイトのチーム開発をする｡機能設計 / 画面設計 /<br> DB設計 / AP設計 / 開発実装等を学ぶ｡</p>
     			</div>
     			<div id="tab3" class="tab-pane">
-      				<p>うううう</p>
+      				<p>待ってね</p>
    	 			</div>
-    			<div id="tab4" class="tab-pane">
-      				<p>ええええ</p>
-    			</div>
+<!--     			<div id="tab4" class="tab-pane">
+      				<p></p>
+    			</div> -->
   			</div>
 		</div>
 	</div>
