--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -26,6 +26,11 @@
             <span><%= m.created_at.strftime("%Y-%m-%d %H:%M") %>：</span>
             <span><%= m.user.name %>：</span>
             <span><%= m.content %></span>
+
+            <% if m.user == current_user %>
+                <%= link_to '❎', message_path(m.id), method: :delete %>
+            <% end %>
+
             <hr>
         <% end %>
     <% else %>
