Add: 制作背景ページに導入機能一覧を追加

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -73,6 +73,7 @@
   background-color: white;
   width:600px;
   height: 600px;
+  overflow: scroll;
   border: groove;
   text-align: center;
   font-family: serif;
