--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,13 +1,12 @@
 <div class="about-bg">
 	<div class="row">
 		<div class="about-container">
-			<ul class="nav nav-tabs"> <!--タブの部分  -->
+			<ul class="nav nav-tabs">
     			<li class="nav-item"><a href="#tab1" class="nav-link active" data-toggle="tab">サイト / 制作理由</a></li>
     			<li class="nav-item"><a href="#tab2" class="nav-link" data-toggle="tab">制作期間 / スキル</a></li>
     			<li class="nav-item"><a href="#tab3" class="nav-link" data-toggle="tab">導入機能</a></li>
-    		<!-- 	<li class="nav-item"><a href="#tab4" class="nav-link" data-toggle="tab"></a></li> -->
   			</ul>
-  			<div class="tab-content"><!--タブのコンテンツ部分-->
+  			<div class="tab-content">
     			<div id="tab1" class="tab-pane active">
 				    <p class="about-title">PhotoPeはどんなサイト？</p>
 				    <p class="about-heading">動物専用画像&動画特化型SNSサイト</p>
@@ -33,11 +32,39 @@
             <p class="about-text" style="padding-top: 10px;">2月: 4人1組でECサイトのチーム開発をする｡機能設計 / 画面設計 /<br> DB設計 / AP設計 / 開発実装等を学ぶ｡</p>
     			</div>
     			<div id="tab3" class="tab-pane">
-      				<p>待ってね</p>
+      			<p class="about-title"">サイト制作に導入した機能</p>
+            <p class="about-heading">ユーザ管理機能</p>
+            <p class="about-text">・ユーザ登録/編集/削除機能</p>
+            <p class="about-text">・ログイン/ユーザ認証機能</p>
+            <p class="about-heading">投稿機能</p>
+            <p class="about-text">・画像投稿/削除機能</p>
+            <p class="about-text">・動画投稿/削除機能</p>
+            <p class="about-text">・モーダルウィンドウ表示</p>
+            <p class="about-text">・ヘッダー表示でどのページからでも投稿可</p>
+            <p class="about-heading">検索機能</p>
+            <p class="about-text">・ジャンル検索機能</p>
+            <p class="about-text">・ユーザ検索機能</p>
+            <p class="about-text">・ユーザ検索はヘッダー表示でどのページからでも可</p>
+            <p class="about-heading">いいね機能</p>
+            <p class="about-text">・いいね登録/解除機能</p>
+            <p class="about-text">・非同期通信化</p>
+            <p class="about-text">・いいねをくれた人の一覧をモーダルウィンドウ表示</p>
+            <p class="about-heading">フォローフォロワー機能</p>
+            <p class="about-text">・フォロー登録/解除機能</p>
+            <p class="about-heading">コメント機能</p>
+            <p class="about-text">・コメント投稿/削除機能</p>
+            <p class="about-text">・非同期通信化</p>
+            <p class="about-heading">ダイレクトメッセージ機能</p>
+            <p class="about-text">・メッセージ投稿/削除機能<br>(投稿者には即時反映/双方向通信は未対応)</p>
+            <p class="about-heading">管理機能</p>
+            <p class="about-text">・各項目の管理機能を実装</p>
+            <p class="about-heading">ページャ機能</p>
+            <p class="about-text">・ユーザ一覧/マイページの投稿/フォロー/<br>フォロワー/いいねページに実装</p>
+            <p class="about-heading">無限スクロール機能</p>
+            <p class="about-text">・投稿一覧ページに実装</p>
+            <p class="about-heading">リアルタイム文字数カウント機能</p>
+            <p class="about-text">・ユーザ情報編集/投稿/コメント入力欄に実装</p>
    	 			</div>
-<!--     			<div id="tab4" class="tab-pane">
-      				<p></p>
-    			</div> -->
   			</div>
 		</div>
 	</div>
