--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -28,6 +28,7 @@
                     </div>
                 <% end %>
             </div>
+            <%= paginate @favorite_pictures %>
         </div>
     </div>
 </div>
