--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,6 +46,7 @@
                     </div>
                 <% end %>
             </div>
+            <%= paginate @pictures %>
         </div>
     </div>
 </div>
