--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -7,6 +7,7 @@
         <div class="col-xs-9">
         	<br>
         	<%= render 'users/relationship' %>
+        	<%= paginate @users %>
         </div>
     </div>
 </div>
