--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,13 +6,15 @@
     		<%= form_for(@user) do |f| %>
 	    		<div class="panel panel-default">
 	    			<div class="panel-heading"><span>プロフィール編集</span>
-	    				<% if current_user == @user %>
-      						<span class="dropdown" style="float: right;">
-  								<button class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="fas fa-cog" style="color:gray;"></i></button>
-    							<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    								<li style="font-size: 12px;"><%= link_to "・アカウントを削除する", user_path(@user), method: :delete,"data-confirm" => "アカウントを削除すると復元は出来ません。本当にこのアカウントを削除してよろしいですか？OKボタンを押すと削除が確定されます。"%></li>
-    							</ul>
-      						</span>
+	    				<% unless @user.id == 11 %> <!--サンプルログイン用のみ、ユーザ削除を非表示にする -->
+	    					<% if current_user == @user %>
+      							<span class="dropdown" style="float: right;">
+  									<button class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="fas fa-cog" style="color:gray;"></i></button>
+    								<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    									<li style="font-size: 12px;"><%= link_to "・アカウントを削除する", user_path(@user), method: :delete,"data-confirm" => "アカウントを削除すると復元は出来ません。本当にこのアカウントを削除してよろしいですか？OKボタンを押すと削除が確定されます。"%></li>
+    								</ul>
+      							</span>
+      						<% end %>
       					<% end %>
 	    			</div>
 	    			<div class="panel-body">
